<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linActionbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#33B5E5" >

            <ImageView
                android:id="@+id/imgListBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/txtListTitle"
                android:layout_width="0dip"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/txtHomePlace"
                android:textColor="#ffffffff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgListMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/bg_noimg" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RelListView"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_0407" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0" >

            <ImageView
                android:id="@+id/imgLeft"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="132dp"
                android:padding="4dp"
                android:src="@drawable/ic_left" />

            <ImageView
                android:id="@+id/imgRight"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:padding="4dp"
                android:src="@drawable/ic_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnShareWB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_wb" />

            <Button
                android:id="@+id/btnShareWX"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/share_wx" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>