<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_detail"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linActionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#33B5E5" >

        <ImageView
            android:id="@+id/imgListBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtListTitle"
            android:layout_width="0dip"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txtHomePlace"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgListMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/ic_map" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linActionbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_missing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_corners"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/bg_top_corners"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtItemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/loading"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linTime"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/bg_nocorner_white"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtItemTime"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/loading"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/bg_nocorner_white"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtItemAddress"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/loading"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_bottom_corners"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtItemTele"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/loading" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_corners_white"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtItemAbstract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/loading"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>